fix: correct spacing for profile data form

--- a/src/components/Capture/DateOfBirthInput/styles.scss
+++ b/src/components/Capture/DateOfBirthInput/styles.scss
@@ -1,5 +1,9 @@
 @use '~@onfido/castor';
 
+:global(.ods-field-label) > .componentContainer {
+  margin: castor.space(0.5) 0 castor.space(-0.5);
+}
+
 .componentContainer {
   display: flex;
   flex-direction: row;
